--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "travel_agency",
   "version": "0.1.0",
   "private": true,
- 
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-dom": "19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "24.8.0",
+    "@types/react": "19.2.2",
+    "typescript": "5.9.3"
   }
 }
